# rockchip_rk3308_buildroot

./: .gitignore  clean-release-build.sh  load-novotech-recovery-config.sh  load-novotech-release-config.sh  save-novotech-recovery-config.sh  save-novotech-release-config.sh
board/rockchip/rk3308/fs-overlay/: root
board/rockchip/rk3308/fs-overlay/boot/: uboot
board/rockchip/rk3308/fs-overlay/etc/: fstab  inittab.old  ntp.conf
board/rockchip/rk3308/fs-overlay/etc/init.d/: S66load_wifi_modules
board/rockchip/rk3308/fs-overlay/etc/network/: interfaces
configs/: novotech_rk3308_recovery_defconfig  novotech_rk3308_release_defconfig
package/: Config.in  Makefile.in  pkg-generic.mk
package/fonts-noto-cjk/: Config.in  fonts-noto-cjk.hash  fonts-noto-cjk.mk
package/liblunaheartbeat/: Config.in  liblunaheartbeat.mk
package/openssh/: S50sshd
package/pudge-ntdriver-box/: Config.in  pudge-ntdriver-box.mk
package/pudge-ntdriver-box-lf/: Config.in  pudge-ntdriver-box-lf.mk
package/pudge-server/: Config.in  pudge-server.mk
package/pulseaudio/: S50pulseaudio  pulseaudio.hash  pulseaudio.mk
package/python-asclepius/: Config.in  python-asclepius.mk
package/rockchip/libiep/: 0001-libiep-add-CMakeLists.txt.patch
package/rockchip/modeset/src/: CMakeLists.txt
package/rockchip/mtp/: 0001-Fix-compile-error.patch  0002-Export-userdata-to-mtp.patch
package/ruby/: ruby.hash  ruby.mk
package/webrtc-audio-processing/: Config.in
package/wqy-zenhei/: Config.in  wqy-zenhei.hash  wqy-zenhei.mk
scripts/: pre-rootfs.sh
system/: device_table.txt
(+3 files in other folders)
